
=============================================================================
                                  WARNING
This current CVS version might not yet work with all libraries/programs which
use Gwenhywfar! Do not install it on production systems !!
=============================================================================

2005/11/09: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- added NetLayerFile (used for debugging, can be used instead of real sockets
  when testing new code)
- added NetLayerLog (used for debugging, loggs data read and written from
  netlayers below itself. The output of this layer can be used for 
  NetLayerFile)


2005/11/08: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- fixed a bug in netlayer (bad function name)


2005/11/03: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- some fixes in network/IPC code (now works with Libchipcard2, so the IPC 
  stuff now works again


2005/11/02: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- started on Gwenhywfar2:
  - src/ipc/*:
    - removed netconnectionhttp*.{c,h}
    - renamed all function GWEN_IPCxxx to GWEN_IpcXxx (according to coding
      style of GWEN)
  - removed src/net
    This has now been replaced by src/net2.
  - removed ui/
  - removed gwenpp/
  - GWEN_CryptKey: Renamed function _FromDb and _ToTb to _fromDb and _toDb
    according to coding style document
  - GWEN_KeySpec: removed proprietary list functions, added GWEN_KeySpec_List
  - GWEN_StringList2, GWEN_Args, GWEN_Logger: Renamed enums according to
    coding style document
  - removed gwenhywfar-config.in.in, added gwenhywfar2-config.in.in
  
  These changes break the API, so SO_CURRENT has been incremented and SO_AGE 
  is 0 !
  This means that all depending applications must be recompiled in order to